adding publishing with github actions

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,11 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
 rootProject.name = 'ui-kit'
 include 'ui-kit-lib'
-//include 'ui-kit-showcase'
+include 'ui-kit-showcase'
 
