--- a/ui-kit-lib/gradle.properties
+++ b/ui-kit-lib/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.code.style=official
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.js.generate.executable.default=false
+kotlin.mpp.stability.nowarn=true
