--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,9 +14,9 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-ktorbase-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-gradle-ui-kit-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-gradle-ktorbase-
+            ${{ runner.os }}-gradle-ui-kit-
 
       - name: Set up JDK 8
         uses: actions/setup-java@v2
