--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -19,25 +19,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-ui-kit-
 
-      - name: Set up JDK 8
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '8'
+          java-version: '11'
           distribution: 'adopt'
 
       - name: Check license
         run: ./gradlew license
 
       - name: Build and test library
-        run: ./gradlew test build --info
-
-      # TODO: remove showcase stuff in default pipeline
-      - name: Create showcase distribution
-        run: ./gradlew browserDistribution
-
-      - name: Update showcase
-        uses: JamesIves/github-pages-deploy-action@v4.2.5
-        with:
-          branch: docs
-          folder: ui-kit-showcase/build/distributions
-          single-commit: true
+        run: ./gradlew build browserDistribution --info
