Corrected credential usage

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,6 +34,9 @@ jobs:
 
       - name: Publish to Maven Central
         run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
+        env:
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
 
       - name: Create showcase distribution
         run: ./gradlew browserDistribution
